--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <section id="header">
             <ul id="subscribe">
-                <li><a href="">Log in</a></li>
+                <li><a href="login.html">Log in</a></li>
                 <div class="mobile">
                     <i id="bar" class="fas fa-outdent"></i>
                 </div>
@@ -181,7 +181,7 @@
             
             <div class="copyright">
 
-                <p>Copyright &copy 2025 Lustra. All rights reserved.</p>
+                <p>Copyright &copy <span id="year"></span> Lustra. All rights reserved.</p>
                 <div class="socialmedia">
                     <a href=""><i class="fab fa-facebook"></i></a>
                     <a href=""><i class="fab fa-instagram"></i></a>
