--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
         <section id="newsletter">
             <div class="newstext">
                 <h4>Stay Updated with the Latest Insights</h4>
-                <p>Subscribe to our newsletter and be the first to explore cutting-edge tutorials,
-                     industry trends, and exclusive updates. Empower your tech journey with knowledge
+                <p>Subscribe to empower your tech journey with knowledge
                       delivered straight to your inbox.</p>
             </div>
 
